# p2pgroupchat-gui

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindCrypto++.cmake  FindOpenP2P.cmake
src/: CMakeLists.txt  defines.h.cmake  mainwindow.ui  p2pgroupchat-gui.cpp
src/res/: style.qss
